--- a/css/style.css
+++ b/css/style.css
@@ -536,7 +536,7 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0px auto;
-  padding:  100px 0;
+  padding:  30vh 0 0 0;
 
   background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
   background-repeat: no-repeat;
@@ -554,7 +554,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0.5;
+  opacity: 0.4;
   overflow: hidden;
 }
 
@@ -1002,11 +1002,10 @@ span {
 #about .about {
   flex-direction: column-reverse;
   text-align: center;
-  max-width: 1200px;
   margin: 0 auto;
   padding: 100px 20px;
 
-  background-image: url('../img/pexels-magda-ehlers-2660262.jpg');
+  background-image: url('../img/milky-way2.jpg');
 
   background-repeat: no-repeat;
   background-size: cover;
