--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,9 @@ a {
 
 p {
   color: #000;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   margin-top: 5px;
-  line-height: 2.5rem;
+  line-height: 2.8rem;
   font-weight: 400;
   letter-spacing: 0.05rem;
 }
@@ -536,7 +536,7 @@ span {
   text-align: center;
   max-width: 1500px;
   margin: 0px auto;
-  padding:  30vh 0 20vh 0;
+  padding:  30vh 0;
 
   background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
   background-repeat: no-repeat;
@@ -567,13 +567,14 @@ span {
 #skills .skills-top {
   width: 90%;
   padding: 1px;
-  margin: 20px auto;
   text-align: center;
+  margin: 20px auto;
   z-index: 30;
   background: rgb(255, 255, 255);
   border-radius: 10px;
   border: 1px solid #cd143c;
 }
+
 
 #skills .skills-bottom {
   display: flex;
@@ -727,7 +728,7 @@ span {
   background-position: center;
   background-attachment: fixed;
   position: relative;
-  padding-bottom: 50px;
+  padding-bottom: 100px;
 }
 
 .dropdown-content::after {
@@ -763,7 +764,7 @@ span {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 150px 0;
+  padding: 0 0 150px 0;
   background-image: url('../img/nadine-shaabana-0xD40qm07X0-unsplash.jpg');
 
   background-repeat: no-repeat;
@@ -1575,11 +1576,7 @@ img {
     height: 300px;
   }
 
-  #skills .skills-top p {
-    text-align: center;
-    width: 80%;
-    margin: auto;
-  }
+  
 
   #skills .skills-item {
     filter: grayscale(0.6);
