--- a/css/style.css
+++ b/css/style.css
@@ -739,7 +739,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0.2;
+  opacity: 0.3;
   overflow: hidden;
 }
 
@@ -782,7 +782,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0.2;
+  opacity: 0.3;
   overflow: hidden;
 }
 
@@ -836,7 +836,7 @@ span {
   border-radius: 2px;
   transition: all .3s;
   box-shadow: 15px 15px 5px #26262671;
-  border: 3px solid #b4b1b1;
+  border: 2px solid #ddd;
   animation: shadow 2s ease-in-out infinite;
   font-family: 'Gruppo', cursive;
 
@@ -889,12 +889,13 @@ span {
   margin: 20px auto;
   overflow: hidden;
   border-radius: 10px;
-  border: 1px solid #999595;
+  border: 2px solid #ddd;
 }
 
 #projects .project-tile {
   padding: 30px;
   flex-basis: 50%;
+  width: 100%;
   height: 100%;
   line-height: 1.9rem;
   display: flex;
@@ -1364,7 +1365,10 @@ img {
     flex-direction: row;
     border: 1px solid #ddd;
   }
+ #projects .pproject-tile{
+  flex-basis: 50%;
 
+ }
   #projects .project-tile a {
     color: #eee;
     border-radius: 0px;
