--- a/css/style.css
+++ b/css/style.css
@@ -889,7 +889,7 @@ span {
   margin: 20px auto;
   overflow: hidden;
   border-radius: 10px;
-  border: 1px solid #dc143c;
+  border: 1px solid #ddd;
 }
 
 #projects .project-tile {
