--- a/css/style.css
+++ b/css/style.css
@@ -768,7 +768,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0.6;
+  opacity: 0.5;
   overflow: hidden;
 }
 
@@ -801,7 +801,6 @@ span {
   background-attachment: fixed;
   position: relative;
 }
-
 #projects .projects::after {
   content: "";
   position: absolute;
@@ -811,9 +810,9 @@ span {
   width: 100%;
   background-color: #000;
   opacity: 0.4;
-  overflow: hidden;
-  
+  overflow: hidden
 }
+
 .projects-header {
   width: 100%;
   height: 170px;
