--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0.6;
+  opacity: 0.7;
   overflow: hidden;
 }
 
@@ -801,6 +801,17 @@ span {
   background-attachment: fixed;
   position: relative;
 }
+
+.projects::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: #dc143c;
+  opacity: .2;  
+}
 #projects .projects::after {
   content: "";
   position: absolute;
@@ -809,7 +820,7 @@ span {
   height: 100%;
   width: 100%;
   background-color: #000;
-  opacity: 0.4;
+  opacity: 0.5;
   overflow: hidden
 }
 
@@ -916,7 +927,7 @@ span {
   margin: 20px auto;
   overflow: hidden;
   border-radius: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #fff;
 }
 
 #projects .project-tile {
