--- a/css/style.css
+++ b/css/style.css
@@ -608,8 +608,8 @@ span {
     margin-left: -22px;
     margin-top: -22px;
     transform: rotate(45deg);
-    background-image: var(--overlay);
-    background: #485563;
+    background-image: linear-gradient(135deg, transparent 50%, #485563 0%);
+    
 }
 
 
@@ -727,7 +727,6 @@ span {
   cursor: pointer;
   border-radius: 3px;
   text-align: center;
-  box-shadow: 15px 15px 5px #26262671;
   transition: all .3s;
   animation: shadow 2s ease-in-out infinite;
   font-family: 'Gruppo', cursive;
@@ -748,7 +747,7 @@ span {
 .dropbtn:focus {
   background: var(--overlay);
   box-shadow: 15px 15px 10px #26262671;
-
+  animation: none;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -794,9 +793,9 @@ span {
 
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {
+/* .dropdown-content a:hover {
   background-color: #ddd
-}
+} */
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
