--- a/_utilities.scss
+++ b/_utilities.scss
@@ -109,3 +109,79 @@
     /* end of section title animations */
 }
 /* end of section title span animation */
+
+// hamburger toggle
+#header .hamburger {
+    height: 60px;
+    width: 60px;
+    margin: 5px auto;
+    display: inline-block;
+    border-radius: 50%;
+    position: relative;
+    background: #29323c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 10;
+    cursor: pointer;
+    transform: scale(0.8);
+    transition: .3s ease;
+
+    // hamburger pulse
+    &.hamburger:after,
+    &.hamburger:before {
+        position: absolute;
+        content: "";
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+        border: none;
+        outline: none;
+        transition: .5s;
+    }
+    // hamburger box shadow
+    &.hamburger::after {
+        opacity: 1;
+        box-shadow: inset 3px 3px 5px #ddd,
+                    inset -3px -3px 5px #000;
+    }
+    // end of hamburger box shadow
+    // pulse
+    &.hamburger:before {
+        border: 2px solid #ddda;
+        animation: ham-pulse 2s ease infinite;
+        @keyframes ham-pulse {
+            50% {
+                border-color: #fff;
+            }
+
+            100% {
+                opacity: 0;
+                transform: scale(1.2);
+            }
+        }
+    }
+    // end of pulse
+    // end of hamburger pulse
+    // hamburger states
+    &:hover,
+    &:focus {
+    // no animation on hover
+        &::before {
+            opacity: 0;
+        }
+        // no animation on hover
+        // box shadow dim on hover
+        &::after {
+            opacity: .6
+        }
+        // box shadow dim on hover
+    }
+    &:active {
+        transform: scale(.6);
+        transition: .3s;
+    }
+    // end of hamburger states
+
+}
+// end of hamburger toggle 
