--- a/css/style.css
+++ b/css/style.css
@@ -950,6 +950,9 @@ hamburger
   transform: scale(1.2);
 }
 
+#contact {
+  padding-bottom: 0;
+}
 #contact .contact {
   flex-direction: column;
   justify-content: start;
@@ -1026,7 +1029,7 @@ hamburger
   color: #ead2a1;
   padding: 0.2em 0.5rem;
   margin: 0.2em auto;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   width: 70%;
   font-weight: 600;
   position: relative;
@@ -1069,17 +1072,15 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item .contact-info {
-  width: 70%;
+  width: 90%;
 }
 #contact .contact .contact-items .contact-item .contact-info p {
-  font-size: 0.8em;
-  line-height: 1.3;
+  font-size: 1rem;
   font-weight: 600;
-  letter-spacing: 0.1em;
-  padding: 1em 0.5rem;
+  padding: 0.5rem;
   border: none;
   outline: none;
-  border-radius: 3px;
+  border-radius: 0.5rem;
   background: #fff;
   margin: 0.5em auto;
   color: #000;
@@ -1102,31 +1103,66 @@ hamburger
   }
 }
 #contact .contact .contact-items .contact-item .contact-info a {
+  display: block;
   width: 100%;
-  font-size: 0.8em;
-  line-height: 2rem;
-  display: inline-block;
-  letter-spacing: 0.1em;
-  padding: 0.2em 0.5em;
-  border-radius: 20px;
-  margin: 0.7em auto;
-  background: linear-gradient(0deg, #581212, #dc134c);
+  font-size: 0.95rem;
+  letter-spacing: 0.1rem;
+  padding: 0.7rem;
+  border-radius: 0.5rem;
+  margin: 0.5rem auto;
   color: #eee;
   cursor: pointer;
   transition: 0.3s ease;
   position: relative;
+  isolation: isolate;
+}
+#contact .contact .contact-items .contact-item .contact-info a::before, #contact .contact .contact-items .contact-item .contact-info a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  background: #dc143c;
+  transition: 0.2s;
+  z-index: -1;
+}
+#contact .contact .contact-items .contact-item .contact-info a::before {
+  background: linear-gradient(0deg, #3f0d0d, #dc134c);
   box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
 }
-#contact .contact .contact-items .contact-item .contact-info a:hover {
-  transform: scale(0.97);
-  transition: 0.2s;
+#contact .contact .contact-items .contact-item .contact-info a::after {
+  background: linear-gradient(0deg, #dc134c, #3f0d0d);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
+  opacity: 0;
 }
-#contact .contact .contact-items .contact-item .contact-info a:active {
-  transform: scale(0.9);
-  transition: 0.2s;
+@media (min-width: 820px) {
+  #contact .contact .contact-items .contact-item .contact-info a:hover {
+    letter-spacing: normal;
+    transform: scale(0.98);
+  }
+  #contact .contact .contact-items .contact-item .contact-info a:hover::before {
+    opacity: 0;
+  }
+  #contact .contact .contact-items .contact-item .contact-info a:hover::after {
+    opacity: 1;
+  }
+}
+@media (max-width: 820px) {
+  #contact .contact .contact-items .contact-item .contact-info a:active {
+    letter-spacing: normal;
+    transform: scale(0.98);
+  }
+  #contact .contact .contact-items .contact-item .contact-info a:active::before {
+    opacity: 0;
+  }
+  #contact .contact .contact-items .contact-item .contact-info a:active::after {
+    opacity: 1;
+  }
 }
 #contact .contact .contact-items .contact-item .contact-info a i {
-  font-size: 1.5em;
+  font-size: 1rem;
   position: relative;
   transform: translateY(100%);
   opacity: 0;
