--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -1,5 +1,6 @@
 // contact
 #contact {
+    padding-bottom: 0;
     .contact {
         flex-direction: column;
         justify-content: start;
@@ -95,7 +96,7 @@
                     color: $span-gold;
                     padding: .2em .5rem;
                     margin: .2em auto;
-                    font-size: 1.5em;
+                    font-size: 1.5rem;
                     width: 70%;
                     font-weight: 600;
                     position: relative;
@@ -104,26 +105,10 @@
                         margin: .5em auto;
                     }
                     
-                    // heading box shadows
-                    // &::before,
-                    // &:after {
-                    //     content: '';
-                    //     position: absolute;
-                    //     top: 0;
-                    //     left: 0;
-                    //     width: 100%;
-                    //     height: 100%;
-                    //     background-color: $overlay-blue-darker;
-                    //     z-index: -1;
-                    //     border-radius: 5px;
-                    //     transition: .5s ease;
-                    //     box-shadow: $box-light-top-sm;
-                    // }
-                    // end of heading box shadows
                 }
                 // end of item headings (h1)
                 
-                // item icon 
+                // ITEM ICON
                 .icon {
                     margin: 5px auto 10px auto;
                     padding: .3em .7em;
@@ -157,18 +142,16 @@
                     }
                 }
                 // of end of item icon
-                // contact-info (h2)
+                // CONTACT DETAILS
                 .contact-info {
-                    width: 70%;
+                    width: 90%;
                     p {
-                        font-size: .8em;
-                        line-height: 1.3;
+                        font-size: 1rem;
                         font-weight: 600;
-                        letter-spacing: .1em;
-                        padding:  1em .5rem;
+                        padding: .5rem;
                         border: none;
                         outline: none;
-                        border-radius: 3px;
+                        border-radius: .5rem;
                         background: $background-light;
                         margin: .5em auto;
                         color: $text-black;
@@ -191,35 +174,65 @@
                         }
                         // end of details shadow
                     }
-                    // end of h2
-                    // form link
+                    // LINK
                     a {
+                        display: block;
                         width: 100%;
-                        font-size: .8em;
-                        line-height: 2rem;
-                        display: inline-block;
-                        letter-spacing: .1em;
-                        padding: .2em .5em;
-                        border-radius: 20px;
-                        margin: .7em auto;
-                        background: linear-gradient(0deg, #581212, #dc134c);
+                        font-size: .95rem;
+                        letter-spacing: .1rem;
+                        padding: .7rem;
+                        border-radius: .5rem;
+                        margin: .5rem auto;
                         color: $text-white-e;
                         cursor: pointer;
                         transition: .3s ease;
                         position: relative;
-                        box-shadow: $box-light-top-sm;
-                        
-                                    &:hover {
-                                        transform: scale(.97);
-                                        transition: .2s;
-                                    }
-                                    &:active {
-                                        transform: scale(.9);
-                                        transition: .2s;
-                                    }
-                        
+                        isolation: isolate;
+                        // BUTTON PSEUDO BG
+                        &::before, &::after {
+                            content: '';
+                            position: absolute;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            border-radius: .5rem;
+                            background: $span-crimson;
+                            transition: .2s;
+                            z-index: -1;
+                        }
+                        &::before {
+                            background: $button-crimson;
+                            box-shadow: $box-light-top-sm;
+                        }
+                        &::after {
+                            background: $button-crimson-hover;
+                            box-shadow: $box-dark-top-sm;
+                            opacity: 0;
+                        }
+                        // BUTTON MEDIA QUERY
+                        // DESKTOP HOVER
+                        @media (min-width: 820px){
+                            &:hover {
+                                letter-spacing: normal;
+                                transform: scale(.98);
+                                &::before {opacity: 0;}
+                                &::after {opacity: 1;}
+                            }
+                        }
+                        // MOBILE ACTIVE CLASS
+                        @media (max-width: 820px){
+                            &:active {
+                                letter-spacing: normal;
+                                transform: scale(.98);
+                                &::before {opacity: 0;}
+                                &::after {opacity: 1;}
+                            }
+                        }
+
+
                         i {
-                            font-size: 1.5em;
+                            font-size: 1rem;
                             position: relative;
                             transform: translateY(100%);
                             opacity: 0;
