--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ hamburger
   opacity: 1;
   transform: translateY(15vh);
   z-index: 30;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 .top-link i {
   color: #ddd;
@@ -599,7 +599,7 @@ hamburger
   padding: 0;
   border-radius: 5px;
   position: absolute;
-  top: 20vh;
+  top: 30vh;
   left: 5vw;
 }
 @media (min-width: 1024px) {
@@ -627,14 +627,11 @@ hamburger
   text-align: left;
   font-size: 1.5em;
   opacity: 0;
+  opacity: 1;
   line-height: 1.3;
-  animation: hero-span 5s ease-in-out;
-  animation-fill-mode: forwards;
-  animation-delay: calc(1s + .5s * var(--s));
   transition: 1s;
   transform-style: preserve-3d;
-  /* hero h1 keyframes */
-  /* hero h1 keyframes */
+  /* HERO H1 INTRO ANIMATION */
 }
 @keyframes hero-span {
   10% {
@@ -650,13 +647,8 @@ hamburger
   font-size: 2rem;
   position: relative;
   display: inline-block;
-  animation: aka 5s ease alternate;
-  animation-delay: 4s;
-  animation-fill-mode: forwards;
   margin: 0.5em 0;
   color: #ead2a1;
-  opacity: 0;
-  transform: scale(0.7);
 }
 @keyframes aka {
   50% {
@@ -682,11 +674,7 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
-  opacity: 0;
-  transform: scale(0.5);
-  transform-style: preserve-3d;
-  animation: show-cta 4s 5.5s;
-  animation-fill-mode: forwards;
+  opacity: 1;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -718,7 +706,7 @@ hamburger
   outline: none;
 }
 #home .hero #cta-header::before {
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 #home .hero #cta-header::after {
@@ -791,6 +779,9 @@ hamburger
   text-transform: capitalize;
   text-align: center;
 }
+#home .hero .slogan p:first-child span {
+  color: #ead2a1;
+}
 @media (min-width: 1024px) {
   #home .hero .slogan {
     left: 50%;
@@ -822,10 +813,10 @@ hamburger
 #skills .skills-top {
   width: 90%;
   text-align: left;
-  padding: 0.5rem;
+  padding: 0.5rem 0.3rem;
   margin: 2em auto;
   background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
-  border-radius: 10px;
+  border-radius: 0.5rem;
   border: none;
   position: relative;
   z-index: 30;
@@ -845,15 +836,16 @@ hamburger
   left: 0;
   width: 100%;
   height: 100%;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  border-radius: 0.5rem;
   border: none;
   outline: none;
 }
 #skills .skills-top .skills-info p {
   color: #f4f4f4;
-  font-size: 0.8rem;
-  line-height: 1.7;
+  font-size: 0.9rem;
+  font-size: 1rem;
+  line-height: 1.6;
   font-weight: 500;
   background: transparent;
   overflow: hidden;
@@ -864,7 +856,6 @@ hamburger
   }
 }
 #skills .skills-top .skills-info p span {
-  font-size: 0.9rem;
   color: #ead2a1;
 }
 #skills .skills-top .skills-drop {
@@ -936,7 +927,7 @@ hamburger
 }
 #skills .dropdown .dropbtn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 #skills .dropdown .dropbtn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
@@ -1066,7 +1057,7 @@ hamburger
   width: 100%;
   border-radius: 10px;
   height: 100%;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
   z-index: 2;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
@@ -1370,7 +1361,7 @@ hamburger
 }
 #contact .contact .contact-items .contact-item .contact-info a::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 #contact .contact .contact-items .contact-item .contact-info a::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
@@ -1750,11 +1741,11 @@ hamburger
 }
 #work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 #work .work-items .work-item .view-site-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1847,7 +1838,7 @@ hamburger
   position: absolute;
   opacity: 0;
   z-index: 20;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 .about .col-right .about-title h2 {
   display: inline-block;
@@ -2258,7 +2249,7 @@ hamburger
 }
 #footer .footer form button::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.5), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
 }
 #footer .footer form button::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
