--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -43,7 +43,7 @@
             border-radius: 5px;
             position: absolute;
             // border: 1px solid #fff;
-            top: 20vh;
+            top: 30vh;
             left: 5vw;
 
             @media (min-width: 1024px) {
@@ -75,14 +75,15 @@
                     text-align: left;
                     font-size: 1.5em;
                     opacity: 0;
+                    opacity: 1;
                     line-height: 1.3;
-                    animation: hero-span 5s ease-in-out;
-                    animation-fill-mode: forwards;
-                    animation-delay: calc(1s + .5s * var(--s));
+                    // animation: hero-span 5s ease-in-out;
+                    // animation-fill-mode: forwards;
+                    // animation-delay: calc(1s + .5s * var(--s));
                     transition: 1s;
                     transform-style: preserve-3d;
 
-                    /* hero h1 keyframes */
+                    /* HERO H1 INTRO ANIMATION */
                     @keyframes hero-span {
                         10% {
                             opacity: 1;
@@ -92,8 +93,6 @@
                             opacity: 1;
                         }
                     }
-                    /* hero h1 keyframes */
-
                 }
             }
                 // "aka" span
@@ -103,13 +102,13 @@
                         font-size: 2rem;
                         position: relative;
                         display: inline-block;
-                        animation: aka 5s ease alternate;
-                        animation-delay: 4s;
-                        animation-fill-mode: forwards;
+                        // animation: aka 5s ease alternate;
+                        // animation-delay: 4s;
+                        // animation-fill-mode: forwards;
                         margin: .5em 0;
                         color: $span-gold;
-                        opacity: 0;
-                        transform: scale(0.7);
+                        // opacity: 0;
+                        // transform: scale(0.7);
                     }
 
                     @keyframes aka {
@@ -150,12 +149,12 @@
             border-radius: 1rem;
             border: none;
             outline: none;
-            opacity: 0;
+            opacity: 1;
             // transform: rotateX(-90deg);
-            transform: scale(.5);
-            transform-style: preserve-3d;
-            animation: show-cta 4s 5.5s;
-            animation-fill-mode: forwards;
+            // transform: scale(.5);
+            // transform-style: preserve-3d;
+            // animation: show-cta 4s 5.5s;
+            // animation-fill-mode: forwards;
             // background-color: $button-background-grey;
             transition: .3s linear;
             cursor: pointer;
@@ -280,6 +279,11 @@
                 color: #ffff;
                 text-transform: capitalize;
                 text-align: center;
+                &:first-child {
+                    span {
+                        color: $span-gold;
+                    }
+                }
             }
             @media (min-width: 1024px) {
                 left: 50%;
