--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -38,16 +38,16 @@
         }
         width: 90%;
         text-align: left;
-        padding: .5rem;
+        padding: .5rem .3rem;
         margin: 2em auto;
         // background-image: var(--overlay);
         // background: #48556388;
         background: $overlay-dark;
-        border-radius: 10px;
+        border-radius: .5rem;
         border: none;
         position: relative;
         z-index: 30;
-        // skills top box shadow
+        // SKILLS TOP BOX SHADOW
         &::before {
             content: '';
             position: absolute;
@@ -56,15 +56,16 @@
             width: 100%;
             height: 100%;
             box-shadow: $box-light-top-sm;
-            border-radius: 10px;
+            border-radius: .5rem;
             border: none;
             outline: none;
         }
         .skills-info {
         p {
             color: $text-light;
-            font-size: .8rem;
-            line-height: 1.7;
+            font-size: .9rem;
+            font-size: 1rem;
+            line-height: 1.6;
             font-weight: 500;
             @media (min-width: 768px){
                 font-size: 1em;
@@ -73,7 +74,7 @@
             overflow: hidden;
 
             span {
-                font-size: .9rem;
+                // font-size: 1rem;
                 color: $span-gold;
             }
             
