--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -65,12 +65,12 @@ $text-valid: #000;
 
 
 // box-shadows
-$box-light-top-sm: inset 2px 2px 3px rgba(221, 221, 221, 0.500),
+$box-light-top-sm: inset 2px 2px 3px rgba(221, 221, 221, 0.250),
                     inset -2px -2px 3px #000a,
-                    2px 2px 3px rgba(0, 0, 0, .200);
+                    2px 2px 3px rgba(0, 0, 0, .250);
 
-$box-light-top-sm-hover: inset 2px 2px 3px rgba(221, 221, 221, 0.500),
-                    inset -2px -2px 3px #000a,
+$box-light-top-sm-hover: inset 2px 2px 3px #000a,
+                    inset -2px -2px 3px rgba(221, 221, 221, 0.250),
                     2px 3px 2px rgba(0, 0, 0, .350);
 
 $box-light-top-bg: inset 4px 4px 5px rgba(221, 221, 221, 0.500),
