--- a/css/style.css
+++ b/css/style.css
@@ -599,7 +599,7 @@ hamburger
   padding: 0;
   border-radius: 5px;
   position: absolute;
-  top: 30vh;
+  top: 25vh;
   left: 5vw;
 }
 @media (min-width: 1024px) {
@@ -618,7 +618,7 @@ hamburger
 }
 @media (min-width: 768px) {
   #home .hero #hero-h1 h2 {
-    font-size: 2em;
+    font-size: 2rem;
   }
 }
 #home .hero #hero-h1 h2 span {
@@ -627,8 +627,10 @@ hamburger
   text-align: left;
   font-size: 1.5em;
   opacity: 0;
-  opacity: 1;
   line-height: 1.3;
+  animation: hero-span 5s ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: calc(1s + .5s * var(--s));
   transition: 1s;
   transform-style: preserve-3d;
   /* HERO H1 INTRO ANIMATION */
@@ -647,8 +649,13 @@ hamburger
   font-size: 2rem;
   position: relative;
   display: inline-block;
+  animation: aka 5s ease alternate;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
   margin: 0.5em 0;
   color: #ead2a1;
+  opacity: 0;
+  transform: scale(0.7);
 }
 @keyframes aka {
   50% {
@@ -674,7 +681,11 @@ hamburger
   border-radius: 1rem;
   border: none;
   outline: none;
-  opacity: 1;
+  opacity: 0;
+  transform: scale(0.5);
+  transform-style: preserve-3d;
+  animation: show-cta 4s 5.5s;
+  animation-fill-mode: forwards;
   transition: 0.3s linear;
   cursor: pointer;
   -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
@@ -779,7 +790,7 @@ hamburger
   text-transform: capitalize;
   text-align: center;
 }
-#home .hero .slogan p:first-child span {
+#home .hero .slogan p a {
   color: #ead2a1;
 }
 @media (min-width: 1024px) {
