--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -43,7 +43,7 @@
             border-radius: 5px;
             position: absolute;
             // border: 1px solid #fff;
-            top: 30vh;
+            top: 25vh;
             left: 5vw;
 
             @media (min-width: 1024px) {
@@ -64,7 +64,7 @@
 
                 // desktop font size
                 @media (min-width: 768px) {
-                    font-size: 2em;
+                    font-size: 2rem;
                 }
 
                 // end of desktop font size
@@ -75,11 +75,10 @@
                     text-align: left;
                     font-size: 1.5em;
                     opacity: 0;
-                    opacity: 1;
                     line-height: 1.3;
-                    // animation: hero-span 5s ease-in-out;
-                    // animation-fill-mode: forwards;
-                    // animation-delay: calc(1s + .5s * var(--s));
+                    animation: hero-span 5s ease-in-out;
+                    animation-fill-mode: forwards;
+                    animation-delay: calc(1s + .5s * var(--s));
                     transition: 1s;
                     transform-style: preserve-3d;
 
@@ -95,20 +94,20 @@
                     }
                 }
             }
-                // "aka" span
+                // "AKA" SPAN
                 #aka {
                     span {
                         font-family: 'Philosopher', sans-serif;
                         font-size: 2rem;
                         position: relative;
                         display: inline-block;
-                        // animation: aka 5s ease alternate;
-                        // animation-delay: 4s;
-                        // animation-fill-mode: forwards;
+                        animation: aka 5s ease alternate;
+                        animation-delay: 4s;
+                        animation-fill-mode: forwards;
                         margin: .5em 0;
                         color: $span-gold;
-                        // opacity: 0;
-                        // transform: scale(0.7);
+                        opacity: 0;
+                        transform: scale(0.7);
                     }
 
                     @keyframes aka {
@@ -122,7 +121,6 @@
                         }
                     }
                 }
-                // end of "aka" span
             
         }
 
@@ -149,12 +147,12 @@
             border-radius: 1rem;
             border: none;
             outline: none;
-            opacity: 1;
+            opacity: 0;
             // transform: rotateX(-90deg);
-            // transform: scale(.5);
-            // transform-style: preserve-3d;
-            // animation: show-cta 4s 5.5s;
-            // animation-fill-mode: forwards;
+            transform: scale(.5);
+            transform-style: preserve-3d;
+            animation: show-cta 4s 5.5s;
+            animation-fill-mode: forwards;
             // background-color: $button-background-grey;
             transition: .3s linear;
             cursor: pointer;
@@ -279,10 +277,8 @@
                 color: #ffff;
                 text-transform: capitalize;
                 text-align: center;
-                &:first-child {
-                    span {
-                        color: $span-gold;
-                    }
+                a {
+                    color: $span-gold;
                 }
             }
             @media (min-width: 1024px) {
