--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -417,9 +417,8 @@ hamburger
         border-radius: 50%;
         position: relative;
 
-      
-
-        &::before, &::after {
+        &::before,
+        &::after {
             content: '';
             position: absolute;
             top: 0;
@@ -431,6 +430,7 @@ hamburger
             opacity: 0;
             animation: loader 2s linear infinite;
         }
+
         &::before {
             animation-delay: .5s;
         }
@@ -440,15 +440,18 @@ hamburger
                 transform: scale(0);
                 opacity: 0;
             }
+
             50% {
                 opacity: 1;
             }
+
             100% {
                 transform: scale(1);
                 opacity: 0;
             }
         }
     }
+
     p {
         position: absolute;
         color: $span-gold;
