--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ body p {
   font-weight: 400;
   line-height: 1.8;
 }
+body .icon {
+  width: 1.125rem;
+  height: 1.125rem;
+}
 
 main {
   scroll-margin-top: 5vh;
