--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -25,6 +25,12 @@ body {
         font-weight: 400;
         line-height: 1.8;
     }
+
+    .icon {
+        width: 1.125rem;
+        height: 1.125rem;
+        // width: clamp(1.5rem, 1vw, 1.0125rem);
+    }
 }
 
 
