--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,9 @@ section .section-title.active-item span {
   color: #b3c0cc;
   transition: 0.125s;
 }
+.bottom-nav .link-item a .icon {
+  opacity: 0.7;
+}
 .bottom-nav .link-item a:active {
   transition: 0.25s;
 }
