--- a/sass/components/_bottom-nav.scss
+++ b/sass/components/_bottom-nav.scss
@@ -68,6 +68,10 @@
                 transition: .125s;
             }
 
+            .icon {
+                opacity: 0.7;
+            }
+
 
             // HOVER AND ACTIVE
             // ACTIVE CLASS
